# SmartShell

./: .env  README.md  debug.py  main.py  pyproject.toml  smartshell.db
smartshell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
